imported reactive form

--- a/src/app/admincrud/admincrud.component.html
+++ b/src/app/admincrud/admincrud.component.html
@@ -59,7 +59,7 @@
 
 
 <!-- Modal -->
-<form [formGroup]="gameData">
+<form [formGroup]="gameData" (submit)="onSubmit()">
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
