--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -30,10 +30,37 @@
                       </ul>
                 </div>
             </div>
+            <div class="row">
+                
+                <div class="col-md-10 m-5 d-flex justify-content-center">
+
+                    <button class="btn btn-success" (click)="showPopup=true" style="width: 250px;" data-toggle="modal" data-target="#exampleModal">Checkout</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <div class="container bg-light justify-content-center">
     <h1 style="text-align: center; color: black; font-weight: bold" class="pt-5">TRADE INSTRUCTIONS</h1>
