--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -34,7 +34,7 @@
                 
                 <div class="col-md-10 m-5 d-flex justify-content-center">
 
-                    <button class="btn btn-success" (click)="showPopup=true" style="width: 250px;" data-toggle="modal" data-target="#exampleModal">Checkout</button>
+                    <button class="btn btn-success" style="width: 250px;" data-toggle="modal" data-target="#exampleModal">Checkout</button>
                 </div>
             </div>
         </div>
