Pagination Design Modification

--- a/src/app/admincrud/admincrud.component.html
+++ b/src/app/admincrud/admincrud.component.html
@@ -47,7 +47,10 @@
                         </ng-container>
                     </tbody>
                 </table>
-                <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                <div class="pagination">
+                    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                </div>
+                
             </div>
         </div>
     </div>
