--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="navbar-nav float-right head-route">
-    <a class="nav-item nav-link active" [routerLink]="['/search']" style="font-size: 30px;">Home</a>
+    <a class="nav-item nav-link" [routerLink]="['/search']" style="font-size: 30px;">Home</a>
     <a class="nav-item nav-link" [routerLink]="['/admin']"  style="font-size: 30px;">Games</a>
     <a class="nav-item nav-link" [routerLink]="['/orderhistory']" style="font-size: 30px;">Orders</a>
     <a class="nav-item nav-link" [routerLink]="['/userrequests']" style="font-size: 30px;">Requests</a>
