added dynamic data to product details page

--- a/src/app/productdetails/productdetails.component.css
+++ b/src/app/productdetails/productdetails.component.css
@@ -1,16 +1,18 @@
-.container{
-    margin: 10px 30px;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.modal-size{
+    width: 80% !important;
+}
+.items{
+    margin-top: 60px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
     grid-gap: 20px;
     grid-auto-rows: minmax(100px,auto);
     grid-auto-columns: minmax(50px,auto);
-}
-.item{
-    background-color: burlywood;
-    border: 3px green solid;
-    border-radius: 3px;
-}
-.modal-size{
-    width: 80% !important;
+    
 }
