--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -37,7 +37,7 @@
 
                 <div class="col-50">
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked (change)="showAccount=false">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked (change)="showAccount=false; calculateTotalPrice()">
                     <label class="form-check-label" for="flexRadioDefault1">
                       Credit
                     </label>
@@ -46,7 +46,7 @@
 
                 <div class="col-50">
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"  (change)="showAccount=true">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"  (change)="showAccount=true; calculateTotalPrice()">
                     <label class="form-check-label" for="flexRadioDefault2">
                       Cash
                     </label>
@@ -67,7 +67,25 @@
             
           </div>
           
-          <input  value="Send Selling Request" class="btn">
+          <div class="row">
+
+            <div class="col-50">
+              <div class="row">
+                <div class="col-50">
+                  <b>Quantity: </b> 
+                </div>
+                <div class="col-50">
+                  <input type="number" class="form-control" min="1" formControlName="productQty" (change)="calculateTotalPrice()">
+                </div>
+              </div>             
+            </div>
+
+            <div class="col-50">
+              <b>Total Price : {{totalPrice}}</b>
+              
+            </div>
+          </div>
+          <input  value="Send Selling Request" class="btn" (click)="onSubmit()">
         
       </div>
     </div>
