--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,40 +1,34 @@
-<div>
-    <div class="row p-5">
-        <div class="col-md-6">
-            <img src={{img}} class="mt-5" height="500px" width="500px">
-        </div>
-        <div class="col-md-6 mt-5">
-            <h5>TRADE VALUE FOR:</h5>
-            <h1>{{gamename}}</h1>
-            <p>Category : {{category}}</p>
-            <div class="row">
-               <div class="col-md-2"></div>
-                <div class="col-md-4">
-                    <div class="list-group">
-                        <button type="button" class="list-group-item list-group-item bg-success font-weight-bold">
-                            Credit Price
-                        </button>
-                        <li class="list-group-item">{{creditprice}}</li>
-                                               
-                      </div>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-group list-group-flush border">
-                        <button type="button" class="list-group-item list-group-item-action active font-weight-bold">
-                            Cash Price
-                          </button>
-                        <li class="list-group-item">{{cashprice}}</li>
-                                             
-                      </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-5 m-5 d-flex justify-content-center">
 
-                    <button class="btn btn-success" style="width: 250px;" [routerLink] = "['/checkout', id]">Checkout</button>
-                </div>
-            </div>
+
+<div class="prod">
+    <img src={{img}}  height="500px" width="500px">
+    <div class="prod-attr">
+        <div class="prod-attr-desc my-5">
+                <h1>{{gamename}}</h1>
+                <h3 class="my-5">Category : {{category}}</h3>
+        </div>
+
+        <div class="prod-attr-val my-5">
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item bg-success font-weight-bold">
+                    Credit Price
+                </button>
+                <li class="list-group-item">{{creditprice}}</li>
+                                       
+              </div>
+
+              <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action active font-weight-bold">
+                    Cash Price
+                  </button>
+                <li class="list-group-item">{{cashprice}}</li>
+                                       
+              </div>
+        </div>
+
+        <div class="prod-attr-chk my-5">
+            <button class="btn btn-success" style="width: 100%;" 
+            [routerLink] = "['/checkout', id]">Checkout</button>
         </div>
     </div>
 </div>
@@ -54,27 +48,7 @@
         <div class="item">Delete any sensitive or personal images, stored data and/or cached data.</div>
         <div class="item">Remove any SIM cards, memory cards or other items not originally part of the product.</div>
     </div>
-    <!-- <div class="container">
-        <div class="item">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo accusantium nostrum reiciendis alias quia culpa ad quasi repellat amet, eos cum quam, enim a architecto adipisci. Perspiciatis velit eum assumenda.
-        </div>
-        <div class="item">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem delectus voluptates reiciendis. Hic necessitatibus, assumenda autem doloremque dolor itaque fugiat atque eveniet illo tenetur? Incidunt ducimus harum dolor possimus quisquam.
-        </div>
-        <div class="item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor ducimus eos culpa saepe cumque porro perspiciatis ea sapiente, repellat doloribus officia modi nulla perferendis aliquam, hic, nostrum tempora eaque?
-        </div>
-        <div class="item">
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor ducimus eos culpa saepe cumque porro perspiciatis ea sapiente, repellat doloribus officia modi nulla perferendis aliquam, hic, nostrum tempora eaque?
-       </div>
-       <div class="item">
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor ducimus eos culpa saepe cumque porro perspiciatis ea sapiente, repellat doloribus officia modi nulla perferendis aliquam, hic, nostrum tempora eaque?
-       </div>
-       <div class="item">
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor ducimus eos culpa saepe cumque porro perspiciatis ea sapiente, repellat doloribus officia modi nulla perferendis aliquam, hic, nostrum tempora eaque?
-       </div>
-   </div> -->
-
+    
 </div>
 </div>
 
