--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md header">
+<nav class="navbar navbar-expand-md header" *ngIf="show">
   <div class="mx-auto order-0 d-flex justify-content-space-between">
     <div class="navbar-brand mx-auto d-flex" style="padding-right: 100px">
       <i-feather name="chevron-left"></i-feather>
